# MaiAgent2026

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.docs.yml  docker-compose.local.yml  handoff.md  main.py  manage.py  prd.md  pyproject.toml
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
docs/architecture/: component.puml  container.puml  context.puml  dynamic.puml
docs/superpowers/specs/: 2026-07-08-conversation-management-design.md  2026-07-09-ai-auto-reply-design.md  2026-07-09-api-admin-design.md  2026-07-10-final-design.md  2026-07-10-scalability-model-routing-design.md  2026-07-11-spec-by-example.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
maiagent_ai_django/: conftest.py
maiagent_ai_django/ai_providers/: apps.py  factory.py  litellm_provider.py  simulator.py
maiagent_ai_django/ai_providers/tests/: test_factory.py  test_simulator.py
maiagent_ai_django/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
maiagent_ai_django/api/tests/: conftest.py  test_conversations_create.py  test_conversations_list.py  test_scenes.py  test_sse_ticket.py  test_submit_message.py
maiagent_ai_django/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
maiagent_ai_django/conversations/: admin.py  apps.py  models.py  selectors.py  services.py  signals.py  tasks.py
maiagent_ai_django/conversations/migrations/: 0001_initial.py  0002_message_deleted_at_message_is_deleted.py  0003_message_metadata.py
maiagent_ai_django/conversations/tests/: factories.py  test_admin.py  test_models.py  test_selectors.py  test_services.py  test_tasks.py
maiagent_ai_django/realtime/: apps.py  consumers.py  routing.py  tickets.py
maiagent_ai_django/realtime/tests/: test_consumers.py  test_tickets.py
maiagent_ai_django/templates/: base.html
maiagent_ai_django/users/: adapters.py  apps.py  models.py  views.py
maiagent_ai_django/users/api/: serializers.py  views.py
maiagent_ai_django/users/migrations/: 0001_initial.py
maiagent_ai_django/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
maiagent_ai_django/users/tests/api/: test_urls.py  test_views.py
