[project]
name = "maiagent-ai-django"
version = "0.1.0"
description = "Behold My Awesome Project!"
readme = "README.md"
license = { text = "Not open source" }
authors = [
  { name = "Scott Chang", email = "contact@maiagent.ai" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "celery==5.6.3",
  "channels>=4.3.2",
  "channels-redis>=4.3.0",
  "crispy-bootstrap5==2026.3",
  "daphne>=4.2.2",
  "django==6.0.7",
  "django-allauth[mfa]==65.18.0",
  "django-anymail==15.0",
  "django-celery-beat==2.9.0",
  "django-cors-headers==4.9.0",
  "django-crispy-forms==2.6",
  "django-environ==0.14.0",
  "django-model-utils==5.0.0",
  "django-redis==7.0.0",
  "djangorestframework==3.17.1",
  "drf-spectacular==0.30.0",
  "gunicorn==26.0.0",
  "hiredis==3.4.0",
  "litellm>=1.91.1",
  "pillow==12.3.0",
  "psycopg[binary]==3.3.4",
  "python-slugify==8.0.4",
  "redis==8.0.1",
  "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
  "coverage==7.15.1",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==7.0.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.7",
  "djangorestframework-stubs==3.17.0",
  "djlint==1.40.6",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "mypy==2.3.0",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-django==4.12.0",
  "pytest-mock==3.15.1",
  "pytest-sugar==1.1.1",
  "ruff==0.15.21",
  "sphinx==9.1.0",
  "sphinx-autobuild==2025.8.25",
  "watchfiles==1.2.0",
  "werkzeug[watchdog]==3.1.8",
]

# ==== djLint ====
[tool.djlint]
profile = "django"
include = "H017,H035"
indent = 2
max_line_length = 119
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
css.indent_size = 2
js.indent_size = 2

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "ERA001", # Commented-out code: false positives on Traditional Chinese Given/When/Then BDD comments
  "RUF001", # Ambiguous unicode character in string: fullwidth punctuation is intentional in Chinese text
  "RUF002", # Ambiguous unicode character in docstring: same as above
  "RUF003", # Ambiguous unicode character in comment: same as above
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "SIM102", # sometimes it's better to nest
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
]
lint.per-file-ignores."*/tests/*" = [
  "PLR0913", # Too many arguments: pytest fixtures commonly exceed 5 params
  "PLR2004", # Magic value comparison: asserting literal status codes/counts is normal in tests
]
lint.isort.force-single-line = true

# ==== pyproject-fmt ====
[tool.pyproject-fmt]
keep_full_version = true

# ==== mypy ====
[tool.mypy]
ignore_missing_imports = true
python_version = "3.14"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]
warn_unused_configs = true
overrides = [
  # Django migrations should not produce any errors:
  { module = "*.migrations.*", ignore_errors = true },
  # factory_boy's DjangoModelFactory isn't typed to return the target Model
  # (mypy sees e.g. `ConversationFactory` instead of `Conversation`), and test
  # helpers commonly pass `None` where DRF/Django stubs expect a concrete
  # instance (e.g. `ModelAdmin(Model, None)`). Neither is a real bug.
  { module = "*.tests.*", ignore_errors = true },
]

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== pytest ====
[tool.pytest]
addopts = [
  "--ds=config.settings.test",
  "--reuse-db",
  "--import-mode=importlib",
]
minversion = "9.0"
python_files = [
  "tests.py",
  "test_*.py",
]

[tool.coverage]
# ==== Coverage ====
run.include = [ "maiagent_ai_django/**" ]
run.omit = [ "*/migrations/*", "*/tests/*" ]
run.plugins = [ "django_coverage_plugin" ]
